# wishwise

./: .env.example  .gitignore  docker-compose.yml  makefile  package-lock.json  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 1eb79d8e5ca6_init.py
backend/: Dockerfile  pyproject.toml
backend/src/wishwise_pr/models/: __init__.py  gift.py  reservation.py
backend/src/wishwise_pr/repositories/: base_repository.py  reservation_repository.py
backend/src/wishwise_pr/routers/: base_router.py  gift_router.py  reservation_router.py  wishlist_router.py
frontend/wishwise-front/: package.json  pnpm-lock.yaml
frontend/wishwise-front/src/: App.jsx  api.js
src/wishwise_pr/: main.py
src/wishwise_pr/configs/: env.py
src/wishwise_pr/models/: user.py  wishlist.py
src/wishwise_pr/repositories/: gift_repository.py  user_repository.py  wishlist_repository.py
src/wishwise_pr/routers/: base_router.py  gift_router.py  reservation_router.py  user_router.py  wishlist_router.py
src/wishwise_pr/schemas/: gift_schema.py  reservation_schema.py  user_schema.py  wishlist_schema.py
src/wishwise_pr/services/: gift_service.py  reservation_service.py  user_service.py  wishlist_service.py
src/wishwise_pr/utils/: auth.py
wishwise-frontend/: package-lock.json  package.json
wishwise-frontend/src/: App.jsx  api.js
wishwise-frontend/src/components/: Layout.jsx
wishwise-frontend/src/pages/: About.jsx  AddGift.jsx  Home.jsx  Login.jsx  Register.jsx  Wishlists.jsx
wishwise-frontend/src/routers/: AppRoutes.jsx
wishwise-frontend/src/styles/: global.css
(+15 files in other folders)
